# diaria

./: .clang-tidy  .codespellrc  CMakeLists.txt  CMakePresets.json  HACKING.md  LICENSE  README.md
.github/workflows/: ci.yml
cmake/: PytestAddTests.cmake  coverage.cmake  dev-mode.cmake  docs.cmake  hardening.cmake  install-rules.cmake  variables.cmake
cmake/user_presets/: lukas.json
docs/: Doxyfile.in
extra/: zsh_completions
src/: CMakeLists.txt  cli_commands.cpp  cli_commands.hpp  main.cpp  mmap_file.hpp  project_info.hpp.in  xdg_paths.hpp
src/cli/: CMakeLists.txt  cli_commands.cpp  cli_commands.hpp  command_types.cpp  command_types.hpp  editor.cpp  editor.hpp  key_management.cpp  key_management.hpp  main.cpp  repo_management.cpp  repo_management.hpp  safe_buffer.hpp
src/cli/commands/: add_entry.cpp  add_entry.hpp  init.cpp  init.hpp  read_entry.cpp  read_entry.hpp  repo.cpp  stats.cpp  stats.hpp  summarize.cpp  summarize.hpp
src/crypto/: CMakeLists.txt  compress.cpp  compress.hpp  entry.cpp  entry.hpp  lib.cpp  lib.hpp  safe_allocator.hpp  safe_buffer.cpp  safe_buffer.hpp  secret_key.cpp  secret_key.hpp
src/diaria/: CMakeLists.txt  command_types.cpp  command_types.hpp  commands.cpp  commands.hpp  editor.cpp  editor.hpp  key_management.cpp  key_management.hpp  lib.cpp  lib.hpp  repo.cpp  repo.hpp  repo_management.cpp  repo_management.hpp  safe_buffer.hpp  util.cpp  util.hpp
src/diaria/commands/: add_entry.cpp  add_entry.hpp  init.cpp  init.hpp  read_entry.cpp  read_entry.hpp  repo.cpp  repo.hpp  stats.cpp  stats.hpp  summarize.cpp  summarize.hpp
src/diaria/repo/: summarize.cpp
src/tui/: CMakeLists.txt  main.cpp
src/util/: char.hpp  rgb.hpp  smart_fd.hpp  time.hpp
test/: CMakeLists.txt
test/end-to-end/: CMakeLists.txt  can_find_executable.sh  dump_load.sh  fd_process_substitution.sh  git_sync.sh  init_db.sh  lit.cfg  read_old_entries.sh  summarize.sh  write_input_nonexist.sh  write_read.sh  write_read_interactive.sh
test/end-to-end/error_conditions/: write_read_interactive_fail.sh  write_read_wrong_password.sh
test/end_to_end/: CMakeLists.txt  helper.py  test_dump_load.py  test_empty_entry.py  test_git_sync.py  test_init_db.py  test_old_entries.py  test_stats_basic.py  test_summarize.py  test_write_read.py
test/end_to_end/entry_data/: eternal.diaria  long.diaria
test/end_to_end/error_conditions/: test_recovery.py  test_write_wrong_editor.py  test_wrong_input.py  test_wrong_password.py
test/src/: crypto_primitives_test.cpp  entry_test.cpp  private_key_test.cpp  util.hpp  util_rgb.cpp  util_time.cpp
